# rest-check

./: CHANGELOG.md  README.md  rest-check.cabal  rest-test.cabal  test.rc
app/: Cli.hs  Main.hs
examples/: example2.rc  example_delete.rc  example_get.rc  example_post.rc  example_put.rc
src/: Cli.hs  Executor.hs  Parser.hs  Verifier.hs
