cabal-version:      3.0
name:               rest-check
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Dimitrios Papakonstantinou
maintainer:         papakonstantinou.dm@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall -threaded

library
    import:           warnings
    exposed-modules:  Parser,
                      Executor,
                      Verifier
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      text,
                      megaparsec,
                      bytestring,
                      case-insensitive,
                      http-types,
                      http-conduit,
                      time,
                      aeson,
                      lens,
                      lens-aeson,
                      scientific,
                      vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable rest-check
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        rest-check,
        text,
        megaparsec,
        optparse-applicative,
        async

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite rest-check-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        rest-check
